offline backup to leia

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -43,31 +43,73 @@
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a606a99f5d0b0ebd8158ec726c3f22e2 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/c65ad65674fc3e418000639934915abe IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/83eb565bc4834e3c4d86dc3001fa7da9 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/bb87a6fdae9ad8395c4c489732a504a7 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a94f3a2d1f05aff46762c12c39e14a06 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/6ebcd8ed9ec02682743b8288e2dd3a49 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/701652bcc72bc63b3f8ade4085b30233 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/461f0c7b350c6b823fc727ebca1508e7 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/db475b38205da21e32c093ad06c763dc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/f5982781ce1fc467e862907b265bd3c2 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/fa768b8a7bb751e0e4006aecf966072b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/f8ccf2f402cee292090e22fbda6a5539 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/42238811666f986d3d02fefdb4ea5318 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/61bc8ed29d96b67148b8fa187930d397 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/80cca341241960c06214c8003718aa19 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/5ef8b4bbbe36929431816d4534745a8f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/8d7a4ef3600adfa3a7e2302e23486266 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/b7f07a92af69cfa2d7c25324fff90a6f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/763573a0a79f505aeedea5f1d45ada53 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/e9ff0083eb7397499f2b364913c0c35b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/d3567c5ea7e0a755e5bef3eae7820aa9 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/e30a60b69a889df81352ec8b1bfdd1d5 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/21ed1b9740cd2f323f1bc06c70021150 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/d9fd04556b07842efef6e65e631a9faf IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/730f25ef38de40704f203432069fedf1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/3b6e2125c7523f7830b9e90c22178385 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/cf30f9bab61915819f2e71641042341d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/1c7049bb4466dadee976dffa8c091a5e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/66c5862d39e29caec1e621976e75d443 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/d3317dd5c4c69a63cef212c56a132b37 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/f68c16cd820843303779777d3483d14e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/62c4714bdd86f83c813faa9d6b0ef09d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/0f2c0844901876564195588eee03937c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/30a23a3d0913a7ef212adaa36e2a275b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/20fddb364fd5188adbb932c9d68b3f04 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/0413cb7fdc250ac8bde1fe992c380ffc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/4889fe47312d7ea1c7f01159731c7f5d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/e2f4e7d47dce334a90d450fedf37a78b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/c5e134d3ac2dc26befa8933006b85259 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/6572ebac8a385a5b6f0ab78fd1667e33 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/eeb3f6e247e04f05963aa04ad7649063 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/c395aa05272d19095e0ba4044b4b1694 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/046f12a695ea1cd66e9b26795303a12d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/51444ba2eaa1af91d52f6bc9796b178b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/b434bef9ffb780c30063f6c16703afb0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/b5966897531abfb79929bc7fa8532169 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/036f19fd63fc6b39bbc48355f70ab77d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/ed493eb732eb0714efff5b47f36f6a7b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/02b885d6b81f678c92575c5d3f95a82c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/6d35ecf4c7ad4af9f435e20bf7002929 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/8e50841afa383e2163c9b296d029d18b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/4e997630317d3a169ddbbbb4783cbc72 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/9b485cff09dc491a505f68cf3db77d0c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/62a9bf57d3cec668337ae0888ae688a0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/5f288be3b979cf1a4fbe0f29abd5320a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/3acf6da8ccbd63b2c08b06271e546345 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/a04a8a4dc8fdb636412fea9163574039 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/8eded81f3e6361c5c042bcb62a56c3bc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a92c53bd23d42e9af994d2abae000e37 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/94abd7a30e9b8de22986f830e69260d1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/ee30a4881708d164c301e7f194fb220e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/4e08a0ed6ad59192db24476b742eae01 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/b373090743bf3c864df92b4b46ce7f20 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/3791f838f1aa1c56465bfd358f7f7bf4 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/7602a470f4a118a405ef489bdc1679cf IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/6371ed5200d68b33c67c15ce07a219bb IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/760f9d424f930f7125ebb48006c27247 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/06500953dd6224b8abad2fdb123dde26 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/3592df75c411202849a071c49ec80048 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/36c1964e5a549b398614ddc650e1744e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -78,35 +120,68 @@
 /etc/mrt/52f456844d9c4335c28640cde84c92fc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/e2c6383aa1b3a9cfd0ffbac99e611bee IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/0cbce7348748dfcd2b472e4c61d269a0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/d5f58d9f308ddfc8271a8b083e03ca89 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/fdcd82c52290ec9a528a81aa5fa9de74 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/490307c372d0b125a9b3b3ecaa8caacd IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/24a7581c4e7eac5958351f48bf41bbef IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/d6a6326d374b9f9df0f76b2dfde44904 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/881230db586d52c7e015f439041e1bba IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/61839e44a027a2497732f2dba9b1d23d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/1d271abca71d544fcbd49e7dd7662ad7 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/fb91898fef6e07bdd47f9b263b1e9e0e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/fad8fc38cd28538bdaed7387e459aa8d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/d535d621749bd01e0cd3f00116d9514f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/0db05f4d219f117c24176886275f3d1d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/0454e3eac2e46e38ff14f7798a5b923a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/5d4fef5184d9e099551c81b60dccacd5 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/bd9a46b8282f2a1b7fac9282a903eec1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/19f856cbbe1798732b139bb929027a71 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/f018e4052e18eabee5798b5d0a140204 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/923c7c908ecc3f6ddded607db9a0f066 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/783d487355d1c2f161c9419b8471b84c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/0d698932ff7c2e915c66fb1be4665953 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/ffe506b10ad68993507b04ac3e3fd5d5 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/720de485d636faff4035bb68d3fc7c7d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/4e1770eee581555699966cb434b9c137 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/5971422454ab7d46df2859623df054ed IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/5807d1edd3cc1252cb6a23737e1e7c79 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/77363fc5c4af2a490db9b23e9454d37f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/5846640a7487913e4327180d1440accc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/ed1b83a5491c8a43869041b0a292b971 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/e5fca37ac5ce9fd9cfd6f94de4cdf2e0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/60a1d5e3894bc4bdf11494b0d954c80e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c96f4445f802df119363e18fd297d2e7 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/e82a87882bb3d8e234fa409d67319244 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/a45e6ad36e503f1b134c5627d881874f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/4633d2dbaed6518152263929fd93bd0d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c6b2fde671a84095fea963940b06ca57 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/a92b9d31289abc89c6867e6757a4cb5f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/1c75da6278c1dba4fa5f8946b908a885 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/3a80ad127736481b7aaae0becc7b32ca IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/b866628ee3e620d99325d9a219bcc7b1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/b03fe2d290686c56dd570ee1c537eed8 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/7a7bafe59c2d7e19776a18b2f8bbda16 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/132c397f2a18807d5347e167e1db2e83 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/5b5bccaa38e4564c3a99d8a7b014f1ef IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/7ea7a1d923496d44d1bd4c98d4f5dc4f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/d499250cefa4f1fde94d703bca5bdc2e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c47c62e264ec96a8063fc58bc356de95 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/5e42f1ccb12cce40c2ac74a7b3e31b78 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/9815f353e2ab6dfac4207538fa57c6c0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/cb8038e6332369fb4cd0ff65ea6406d9 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a99d272fe13137771c05ef072f681646 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/40ca8f59c46de2c20282c0f2352b796f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/03e27ace99365592061d057c1278c4a0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/7b47b9b1549f0e49df544740aa553764 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/8e8119111ba8efe6147f53bb6037e40a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/dddd6a6e92e16d53e7aaf7f928c592a0 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/a6147b5cfa5cb51407991d16ab86e375 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/048ef78391e3f0ff26b22411261b6e1d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c431ca830d694bd2e3b4c6af1221d8b3 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/05b0ef6c32b11863ace3bffd3473fd67 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/1557edb80f01743fdabbdafdd2319320 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/90076ade3d539bb0a012fa66e0b65241 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/265bfe254f656470b23730758dbe0c19 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/1f89aac22fe9a692f416c958d2226497 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/0fed78994f2549051c4578c1d8cbb837 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/392b82ce1551f18f8b157b851dfbff9a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -119,6 +194,9 @@
 /etc/mrt/79607105088b2e6730c900455b94525f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/7c55910fddc4482a0362aae07eb9f410 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/15255e5184e7ecfafe2a8e7f0edc768d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/4a42a6f7f4d0a278e0228f0a34a703ef IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/b65fbf6e3649a4f3a476960aeb613173 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a3c6f87b00c29fde886d4e638ad5656e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/python2.7 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/sysctl.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/udev IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
