--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -25,6 +25,9 @@
 /etc/dbus-1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/dbus-1/session.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/dbus-1/system.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor/init IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor/init/network-interface-security IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/python IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/python3 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -147,6 +150,7 @@
 /etc/mrt/036f19fd63fc6b39bbc48355f70ab77d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/ed493eb732eb0714efff5b47f36f6a7b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/b4e0f79eeca27d2fca02d280ba7c4ef1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/283a31f672f1f444d68a1ff434c54881 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/93be3c0e233198f164051fd33b05954a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/02b885d6b81f678c92575c5d3f95a82c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/99a14f52ec18f69455e055161c1300ad IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -419,6 +423,8 @@
 /etc/insserv.conf.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/init.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/cron.daily IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/NetworkManager/dispatcher.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc4.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/alternatives IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/init IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -430,6 +436,9 @@
 /etc/perl/Net IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/perl/CPAN IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/ldap IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor.d/tunables IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/apparmor.d/local IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/postfix IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/postfix/postfix-files.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/postfix/sasl IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
