--- a/ntp.conf
+++ b/ntp.conf
@@ -17,11 +17,7 @@ filegen clockstats file clockstats type day enable
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
 # pool: <http://www.pool.ntp.org/join.html>
-pool 0.debian.pool.ntp.org iburst
-pool 1.debian.pool.ntp.org iburst
-pool 2.debian.pool.ntp.org iburst
-pool 3.debian.pool.ntp.org iburst
-
+pool be.ntp.pool.org
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
@@ -45,7 +41,8 @@ restrict source notrap nomodify noquery
 # Clients from this (example!) subnet have unlimited access, but only if
 # cryptographically authenticated.
 #restrict 192.168.123.0 mask 255.255.255.0 notrust
-
+restrict 193.191.177.6 mask 255.255.255.255
+restrict 193.191.177.225 mask 255.255.255.255 
 
 # If you want to provide time to your local subnet, change the next line.
 # (Again, the address is an example only.)
