changed quintenouters to quinten-nouters and allowed recursion / query

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -615,6 +615,7 @@
 /etc/mrt/738dd7aa9899efc5373b5e2000020a7d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/4224e326cfb98411a865c16d41c6c0f8 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/cc10582bb1616f4b4683593441302e26 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/ceb6244458d5024093624df9c3dbc78d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/8e8119111ba8efe6147f53bb6037e40a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/13e4d71c66d6f2425abd524c4f76d215 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/1ec45491919fa9c431eae6ad3811c890 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
