--- a/resolv.conf
+++ b/resolv.conf
@@ -1,4 +1,4 @@
 # --- BEGIN PVE ---
-search uclllabs.be
-nameserver 8.8.8.8
+search quintennouters.sb.uclllabs.be
+nameserver 127.0.0.1
 # --- END PVE ---
