small changes or not important changes

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -42,6 +42,7 @@
 /etc/apt/preferences.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/binfmt.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/bind IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/bind/zone IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/cron.monthly IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -162,9 +163,11 @@
 /etc/mrt/9f0eddbf1890ada281a505cffa9154d1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/cf1963524d9ec9066d34dcddd7e6dc9b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/d3317dd5c4c69a63cef212c56a132b37 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/153bf5a83b79762670b9fc1d736530be IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/15caabb9937ea195487158c60c337a57 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/f68c16cd820843303779777d3483d14e IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/63bf4773bf8981f0b792860246c04bdb IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/67e4f36d9b4f9eef0385710678437171 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/3f61d034cf09fe5b82b68674853c8414 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/62c4714bdd86f83c813faa9d6b0ef09d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/54afbc60f511beddb24c7b19f5dd2bfc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -331,6 +334,7 @@
 /etc/mrt/cc333ab9d21a3d2119d098ff777971cc IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/4f1c9ec173463593033bf3af12ad7518 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/2c43d88492abd3031722661e05906fb4 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/265724c10a4683ab3f79e66c7b79d9ac IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/7951ea378f2d4ef12eb198d58e48b24d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c7e83b7972c32edde1788f9065b8d709 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/30b4b555888017741e5fb1ecd8dfe30a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -529,6 +533,7 @@
 /etc/mrt/212c6a416b8baf0749ad3da759b391e3 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c6b2fde671a84095fea963940b06ca57 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/a92b9d31289abc89c6867e6757a4cb5f IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/3b6a7225f696c95b9ba3c2f8042fc2bd IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/cf2b3ef206b14e95bce5ac14358d3f06 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/29a11c6970b75bad7deb95912502ab2b IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/c8f923c21df3f101ee8c8d8e33033544 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -668,6 +673,7 @@
 /etc/mrt/3e091ec877132f81381e1e7c3f322b59 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/746956a1c46c6d225846406b0b45514a IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/ee16a443adde0a72d2f6897983e2e4b6 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mrt/a04a601df43a59c5f9253dd46491962c IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/697227b84642d3b1bc9f6abc291a3212 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/da02a8944de723e6f5cd1df346eeb454 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt/10e43e94a1863ece7e87d23825ddd3c2 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
