--- a/ntp.conf
+++ b/ntp.conf
@@ -28,8 +28,11 @@ pool be.pool.ntp.org
 # up blocking replies from your own upstream servers.
 
 # By default, exchange time with everybody, but don't allow configuration.
-restrict -4 default kod notrap nomodify nopeer noquery limited
-restrict -6 default kod notrap nomodify nopeer noquery limited
+restrict -4 default kod notrap nomodify nopeer noquery limited noserve
+restrict -6 default kod notrap nomodify nopeer noquery limited noserve
+server 193.191.177.6
+server 193.191.177.157
+server 2001:6a8:2880:a021::6:
 
 # Local users may interrogate the ntp server more closely.
 restrict 127.0.0.1
@@ -41,8 +44,8 @@ restrict source notrap nomodify noquery
 # Clients from this (example!) subnet have unlimited access, but only if
 # cryptographically authenticated.
 #restrict 192.168.123.0 mask 255.255.255.0 notrust
-restrict 193.191.177.6 mask 255.255.255.255
-restrict 193.191.177.225 mask 255.255.255.255 
+#restrict 193.191.177.6 mask 255.255.255.255
+#restrict 193.191.177.225 mask 255.255.255.255 
 
 # If you want to provide time to your local subnet, change the next line.
 # (Again, the address is an example only.)
