--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -2,3 +2,6 @@
         ServerName www1.quinten-nouters.sb.uclllabs.be
         DocumentRoot /var/www/html/www1
 </VirtualHost>
+<Directory /var/www/html/www1>
+	AllowOverride AuthConfig
+</Directory>
