added ErrorLog and CustomLog to the vhosts

--- a/apache2/sites-available/www2.conf
+++ b/apache2/sites-available/www2.conf
@@ -2,4 +2,6 @@
 # This first listed virtual host is also the default for *:80
         ServerName www2.quinten-nouters.sb.uclllabs.be
         DocumentRoot /var/www/html/www2
+	ErrorLog ${APACHE_LOG_DIR}/www2-error.log
+	CustomLog ${APACHE_LOG_DIR}/www2-access.log combined
 </VirtualHost>
