--- a/apache2/sites-available/www.conf
+++ b/apache2/sites-available/www.conf
@@ -1,4 +1,6 @@
 <VirtualHost *:80>
         ServerName www.quinten-nouters.sb.uclllabs.be
         DocumentRoot /var/www/html/www
+	ErrorLog ${APACHE_LOG_DIR}/www-error.log
+	CustomLog ${APACHE_LOG_DIR}/www-access.log combined
 </VirtualHost>
