--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -1,6 +1,8 @@
 <VirtualHost *:80>
         ServerName www1.quinten-nouters.sb.uclllabs.be
         DocumentRoot /var/www/html/www1
+	ErrorLog ${APACHE_LOG_DIR}/www1-error.log
+	CustomLog ${APACHE_LOG_DIR}/www1-access.log combined
 </VirtualHost>
 <Directory /var/www/html/www1>
 	AllowOverride AuthConfig
