changed the location of the vhosts from /var/www to /etc/www. Also changed the references in the files to /etc/www/...

--- a/apache2/sites-available/www.conf
+++ b/apache2/sites-available/www.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
         ServerName www.quinten-nouters.sb.uclllabs.be
-        DocumentRoot /var/www/html/www
-	ErrorLog ${APACHE_LOG_DIR}/www-error.log
-	CustomLog ${APACHE_LOG_DIR}/www-access.log combined
+        DocumentRoot /etc/www/html/www
+	ErrorLog /etc/www/html/www/www-error.log
+	CustomLog /etc/www/html/www/www-access.log combined
 </VirtualHost>
