--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
         ServerName www1.quinten-nouters.sb.uclllabs.be
-        DocumentRoot /var/www/html/www1
-	ErrorLog ${APACHE_LOG_DIR}/www1-error.log
-	CustomLog ${APACHE_LOG_DIR}/www1-access.log combined
+        DocumentRoot /etc/www/html/www1
+	ErrorLog /etc/www/html/www1/www1-error.log
+	CustomLog /etc/www/html/www1/www1-access.log combined
 </VirtualHost>
-<Directory /var/www/html/www1>
+<Directory /etc/www/html/www1>
 	AllowOverride AuthConfig
 </Directory>
