--- a/apache2/apache2.conf
+++ b/apache2/apache2.conf
@@ -173,11 +173,11 @@ Include ports.conf
 	Require all granted
 </Directory>
 
-#<Directory /srv/>
-#	Options Indexes FollowSymLinks
-#	AllowOverride None
-#	Require all granted
-#</Directory>
+<Directory /etc/www/>
+	Options Indexes FollowSymLinks
+	AllowOverride None
+	Require all granted
+</Directory>
 
 
 
