--- a/apache2/sites-available/www2.conf
+++ b/apache2/sites-available/www2.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 # This first listed virtual host is also the default for *:80
         ServerName www2.quinten-nouters.sb.uclllabs.be
-        DocumentRoot /var/www/html/www2
-	ErrorLog ${APACHE_LOG_DIR}/www2-error.log
-	CustomLog ${APACHE_LOG_DIR}/www2-access.log combined
+        DocumentRoot /etc/www/html/www2
+	ErrorLog /etc/www/html/www2/www2-error.log
+	CustomLog /etc/www/html/www2/www2-access.log combined
 </VirtualHost>
