remover some trash and enabled http_add_vhost for check

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -32,6 +32,8 @@
 /etc/python3 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/logcheck IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.workstation IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/resolvconf IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/resolvconf/update-libc.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/newt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -51,6 +53,8 @@
 /etc/www/html/www1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www1/private IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/testhttp IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/httptest IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
@@ -748,6 +752,9 @@
 /etc/scripts IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc2.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/opt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mysql IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mysql/conf.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/mysql/mariadb.conf.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/dhcp IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-exit-hooks.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
