created secure and supersecure vhost

--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -49,12 +49,13 @@
 /etc/cron.monthly IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/supersecure IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www2 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www1 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www1/private IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/www IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/www/html/secure IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/www/html/testhttp IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
-/etc/www/html/httptest IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/update-motd.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc6.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
