fixing http and https, certbot command

--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerName secure
+	ServerName secure.quinten-nouters.sb.uclllabs.be
 	DocumentRoot /etc/www/html/secure
 	ErrorLog /etc/www/html/secure/secure-error.log
 	CustomLog /etc/www/html/secure/secure-access.log combined
