--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -818,6 +818,22 @@
 /etc/postfix/dynamicmaps.cf.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/vim IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/keys IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/archive/quinten-nouters.sb.uclllabs.be IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/accounts/acme-v02.api.letsencrypt.org/directory/1ed6875d58a0ee3246b87039db109328 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/csr IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/live/quinten-nouters.sb.uclllabs.be IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/pre IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/deploy IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/letsencrypt/renewal-hooks/post IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/profile.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/iproute2 IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/iproute2/rt_tables.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
