--- a/apache2/sites-available/000-default.conf
+++ b/apache2/sites-available/000-default.conf
@@ -1,4 +1,4 @@
-#<VirtualHost *:80>
+<VirtualHost *:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -8,8 +8,8 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
 
-	#ServerAdmin webmaster@localhost
-	#DocumentRoot /var/www/html
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
@@ -17,8 +17,8 @@
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	#ErrorLog ${APACHE_LOG_DIR}/error.log
-	#CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
@@ -26,6 +26,6 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
-#</VirtualHost>
+</VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
