--- a/apache2/sites-available/www.conf
+++ b/apache2/sites-available/www.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
-        ServerName www.quinten-nouters.sb.uclllabs.be
+        ServerName quinten-nouters.sb.uclllabs.be
+	ServerAlias www.quinten-nouters.sb.uclllabs.be
         DocumentRoot /etc/www/html/www
 	ErrorLog /etc/www/html/www/www-error.log
 	CustomLog /etc/www/html/www/www-access.log combined
