redirect http traffic to https for secure and supersecure

--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -3,4 +3,6 @@
 	DocumentRoot /etc/www/html/secure
 	ErrorLog /etc/www/html/secure/secure-error.log
 	CustomLog /etc/www/html/secure/secure-access.log combined
+	RewriteEngine On
+	Redirect permanent / https://secure.quinten-nouters.sb.uclllabs.be
 </VirtualHost>
