--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -3,4 +3,6 @@
 	DocumentRoot /etc/www/html/supersecure
 	ErrorLog /etc/www/html/supersecure/supersecure-error.log
 	CustomLog /etc/www/html/supersecure/supersecure-access.log combined
+	RewriteEngine On
+	Redirect permanent / https://supersecure.quinten-nouters.sb.uclllabs.be
 </VirtualHost>
