--- a/apache2/sites-available/supersecure-le-ssl.conf
+++ b/apache2/sites-available/supersecure-le-ssl.conf
@@ -8,5 +8,6 @@
 SSLCertificateFile /etc/letsencrypt/live/quinten-nouters.sb.uclllabs.be/fullchain.pem
 SSLCertificateKeyFile /etc/letsencrypt/live/quinten-nouters.sb.uclllabs.be/privkey.pem
 Include /etc/letsencrypt/options-ssl-apache.conf
+Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains;"
 </VirtualHost>
 </IfModule>
