added at the end of my documentroot a / also changed it in the http_add_vhost script. the default page is also changed to welcome.Also adding log files

--- a/apache2/apache2.conf
+++ b/apache2/apache2.conf
@@ -173,7 +173,7 @@ Include ports.conf
 	Require all granted
 </Directory>
 
-<Directory /etc/www/>
+<Directory /etc/www/html/>
 	Options Indexes FollowSymLinks
 	AllowOverride None
 	Require all granted
