--- a/apache2/sites-available/secure.conf
+++ b/apache2/sites-available/secure.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 	ServerName secure.quinten-nouters.sb.uclllabs.be
-	DocumentRoot /etc/www/html/secure
+	DocumentRoot /etc/www/html/secure/
 	ErrorLog /etc/www/html/secure/secure-error.log
 	CustomLog /etc/www/html/secure/secure-access.log combined
 	RewriteEngine On
-	Redirect permanent / https://secure.quinten-nouters.sb.uclllabs.be
+	Redirect permanent / https://secure.quinten-nouters.sb.uclllabs.be/
 </VirtualHost>
