--- a/apache2/sites-available/supersecure.conf
+++ b/apache2/sites-available/supersecure.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 	ServerName supersecure.quinten-nouters.sb.uclllabs.be
-	DocumentRoot /etc/www/html/supersecure
+	DocumentRoot /etc/www/html/supersecure/
 	ErrorLog /etc/www/html/supersecure/supersecure-error.log
 	CustomLog /etc/www/html/supersecure/supersecure-access.log combined
 	RewriteEngine On
-	Redirect permanent / https://supersecure.quinten-nouters.sb.uclllabs.be
+	Redirect permanent / https://supersecure.quinten-nouters.sb.uclllabs.be/
 </VirtualHost>
