--- a/apache2/sites-available/www.conf
+++ b/apache2/sites-available/www.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
         ServerName quinten-nouters.sb.uclllabs.be
 	ServerAlias www.quinten-nouters.sb.uclllabs.be
-        DocumentRoot /etc/www/html/www
+        DocumentRoot /etc/www/html/www/
 	ErrorLog /etc/www/html/www/www-error.log
 	CustomLog /etc/www/html/www/www-access.log combined
 </VirtualHost>
