--- a/apache2/sites-available/www1.conf
+++ b/apache2/sites-available/www1.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
         ServerName www1.quinten-nouters.sb.uclllabs.be
-        DocumentRoot /etc/www/html/www1
+        DocumentRoot /etc/www/html/www1/
 	ErrorLog /etc/www/html/www1/www1-error.log
 	CustomLog /etc/www/html/www1/www1-access.log combined
 </VirtualHost>
