--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -854,6 +854,9 @@
 /etc/ssl IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/ssl/private IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/ssl/certs IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/dovecot IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/dovecot/private IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
+/etc/dovecot/conf.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/incron.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/selinux IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
 /etc/rcS.d IN_CLOSE_WRITE /bin/sh /etc/scripts/backup.sh $@/$#
