changed a file location to /var/vmail

--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -4,7 +4,7 @@ base_dir = /var/run/dovecot/
 info_log_path = /var/log/dovecot.info
 log_path = /var/log/dovecot
 log_timestamp = "%Y-%m-%d %H:%M:%S "
-mail_location = maildir:/home/vmail/%d/%n
+mail_location = maildir:/var/vmail/%d/%n
 auth_debug_passwords=yes
 passdb {
   args = /etc/dovecot/passwd
